--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -16,9 +16,9 @@
       <ul>
         <li>Let's Quiz! </li>
         <li>View Highscores </li>
-        <li class="timer">Time Left: </li>
+        <li class="timer">Time Left: </li> -->
         <!-- <p class="countdown"></p> -->
-      </ul> 
+      <!-- </ul> 
     </nav>
 
   </header>
@@ -26,17 +26,17 @@
   <main>
 
 
-    <div class="start-page">
-      Click here to start the quiz!
-      <div>
-        <button id="start-button"> Start Quiz!</button>
-      </div>
-    </div>
-    <h2 id="question" hidden></h2>
+    <div class="start-page">Click here to start the quiz!</div>
+      
+    <div>
+      <button id="start-button"> Start Quiz!</button>
+    </div> -->
+    
+    <!-- <h2 id="question" hidden></h2> -->
     <!-- These are the questions that will be shown one by one -->
-    <div id="quiz-buttons" style="display: none">
+    <!-- <div id="quiz-buttons" style="display: none"> -->
       <!-- Buttons that will be shown as possible answers -->
-      <button data-index="0"></button>
+      <!-- <button data-index="0"></button>
       <button data-index="1"></button>
       <button data-index="2"></button>
     </div>
@@ -51,7 +51,7 @@
 
 </body>
 <script src="Assets/javascript/script.js"></script>
-</html>
+</html> -->
 
 
 
@@ -85,3 +85,6 @@ SCORE, HIGH SCORES ETC
 
 
 -->
+
+
+
