added form for highscores and linked new html and JS files

--- a/index-new.html
+++ b/index-new.html
@@ -5,15 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./Assets/css/style.css"/>
+
 </head>
 <body>
   
   <header>
-    <h1>High Scores</h1>
-    <h1 class="time-left"> Time: 60 sec.</h1>
+    <nav>
+      <h1>High Scores</h1>
+      <h2 class="time-left"> Time: 60 sec.</h2>
+    </nav>
   </header>
 
   <main>
+    <div class="background"></div>
     <h1>Quiz</h1>
 
     <p class="start-page"> 
@@ -31,12 +36,7 @@
         You're done!
         <p class = "score"></p>
 
-        <form class = "form-initials" >
-          <!-- action="/action_page.php" -->
-          <label for="initials">Initials</label><br>
-          <input type="text" id="initials" name="initials" value="Add your initials here:"><br><br>
-          <input class ="submit-button" type="submit" value="Submit">
-        </form> 
+        
 
       </div>
 
