--- a/highscores.html
+++ b/highscores.html
@@ -5,14 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./Assets/css/style.css"/>
+
 </head>
 <body>
   
 
-
-
-different navbar
-
+  <header>
+    <h1>High Scores</h1>
+    <h2 class="score"></h2>
+  </header>
 
 
 
