--- a/highscores.html
+++ b/highscores.html
@@ -4,23 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Quiz about Greece/Highscores</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./Assets/css/style.css"/>
+  
 
 </head>
-<body>
+<body class="background-highscores highscores-page">
   
 
   <header>
-    <h1>High Scores</h1>
-    <h2 class="score"></h2>
+    <h1>
+      <a id="home-page"> 
+        Home
+      </a>
+    </h1>
   </header>
 
+  <main>
+    <h2 > High Scores!</h2>
+    <ol id="highscores-list" >
 
-
-
-
-
+    </ol>
+  </main>
 
 
   <script src="./Assets/javascript/highscores.js"></script>
