--- a/highscores.html
+++ b/highscores.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./Assets/css/style.css"/>
+  <link rel="preload" as="image" href="./Assets/mountains-g874635601_1920.jpg">
+
   
 
 </head>
